compiler/testData/cli/jvm/forbidKotlinPackageK2.out
warning: language version 2.0 is experimental, there are no backwards compatibility guarantees for new language and library features
compiler/testData/cli/jvm/forbidKotlinPackage.kt:4:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package
package kotlin.internal
^
COMPILATION_ERROR
